Update the first box of the landing page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
   <body>
     <div class="Box1">
       <div class="header">
-        HEADER
+        <div class="underHeader">HEADER LOGO</div>
+        <ul class="ulUnderHeader">
+          <li><a href="#">header link one </a></li>
+          <li><a href="#">header link two </a></li>
+          <li><a href="#">header link three </a></li>
+        </ul>
       </div>
       <div class="main">
+        
+        <div class = "underMainLeftBox">
+          <div class="underunderMainleftBoxText">Text</div>
+          <div class="underunderMainleftBoxButton"></div>
+        </div>
+        <div class = "underMainRightBox">Right Box</div>
         MAIN
       </div>
     </div>
