Add the paragraph in box one and the button too.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
       <div class="main">
         
         <div class = "underMainLeftBox">
-          <div class="underunderMainleftBoxText">Text</div>
+          <div class="underunderMainleftBoxText">
+            <p class = "paragraphTitle">This website is awesome</p>
+            <p class="paragraphBody">This website has some subtext that goes here under the main title. It’s a smaller font and the color is lower contrast.</p>
+            <div class="button"><button> Sign Up</button></div>
+            
+          </div>
           <div class="underunderMainleftBoxButton"></div>
         </div>
         <div class = "underMainRightBox">Right Box</div>
