Align some items in box 1

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           </div>
           <div class="underunderMainleftBoxButton"></div>
         </div>
-        <div class = "underMainRightBox">Right Box</div>
-        MAIN
+        <div class = "underMainRightBox">This is a place holder for an image</div>
+        
       </div>
     </div>
 
