--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
 
     </div>
     <div class="Box3">
-      BOX3
+      <div class="underBox3">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it’s just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        
+        <div class="Signature"><p >-Thor,God of Thunder</p></div>
+        
+      </div>
     </div>
     <div class="Box4">
       BOX4
