Change some image names

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="underunderMainleftBoxButton"></div>
         </div>
         <div class = "underMainRightBox">
-          <img src=".\Images\chic-modern-luxury-aesthetics-style-living-room-gray-tone.jpg" alt="<a href="https://www.freepik.com/free-photo/chic-modern-luxury-aesthetics-style-living-room-gray-tone_18092359.htm#query=modern%20furniture&position=4&from_view=keyword&track=ais&uuid=9cefa7f6-7215-4415-bc62-9f8be7da26ec"></a> 
+          <img src=".\Images\living_room.jpg" alt="L"> 
         </div>
         
       </div>
