Add more Images Change header logo name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="Box1">
       <div class="header">
-        <div class="underHeader">HEADER LOGO</div>
+        <div class="underHeader">CORE FURNITURE</div>
         <ul class="ulUnderHeader">
           <li><a href="#">header link one </a></li>
           <li><a href="#">header link two </a></li>
@@ -52,15 +52,15 @@
           <div class="paragraphUnderImage">This is some subtext under an illustration or image</div>
         </div>
         <div class ="underBox2SecondCard" >
-          <div class="Image"></div>
+          <div class="Image"><img src=".\Images\copy4.jpg" alt=""></div>
           <div class="paragraphUnderImage">This is some subtext under an illustration or image</div>
         </div>
         <div class ="underBox2SecondCard" >
-          <div class="Image"></div>
+          <div class="Image"><img src=".\Images\Ovalcopy1.jpg" alt=""></div>
           <div class="paragraphUnderImage">This is some subtext under an illustration or image</div>
         </div>
         <div class ="underBox2SecondCard" >
-          <div class="Image"></div>
+          <div class="Image"><img src=".\Images\Ovalcopy2.jpg" alt=""></div>
           <div class="paragraphUnderImage">This is some subtext under an illustration or image</div>
         </div>
 
