Add more images of types of wood

--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
           <div class="paragraphUnderImage">We use <span class="BoldBlack">Mahogany</span> wood in our furniture when we need to emphasize a minimalist design. </div>
         </div>
         <div class ="underBox2SecondCard" >
-          <div class="Image"><img src=".\Images\cpoy2.jpg" alt=""></div>
+          <div class="Image"><img src=".\Images\Walnut.jpg" alt=""></div>
+          <div class="paragraphUnderImage"><span class="BoldBlack">Walnut</span> is a hardwood, it can withstand daily wear and tear,  making it suitable for furniture that needs to last.</div>
+        </div>
+        <div class ="underBox2SecondCard" >
+          <div class="Image"><img src=".\Images\MDF.jpg" alt=""></div>
           <div class="paragraphUnderImage">This is some subtext under an illustration or image</div>
         </div>
         <div class ="underBox2SecondCard" >
-          <div class="Image"><img src=".\Images\copy3.jpg" alt=""></div>
+          <div class="Image"><img src=".\Images\PINE.jpg" alt=""></div>
           <div class="paragraphUnderImage">This is some subtext under an illustration or image</div>
         </div>
         <div class ="underBox2SecondCard" >
-          <div class="Image"><img src=".\Images\copy4.jpg" alt=""></div>
+          <div class="Image"><img src=".\Images\Oak.jpg" alt=""></div>
           <div class="paragraphUnderImage">This is some subtext under an illustration or image</div>
         </div>
         <div class ="underBox2SecondCard" >
-          <div class="Image"><img src=".\Images\Ovalcopy1.jpg" alt=""></div>
-          <div class="paragraphUnderImage">This is some subtext under an illustration or image</div>
-        </div>
-        <div class ="underBox2SecondCard" >
-          <div class="Image"><img src=".\Images\Ovalcopy2.jpg" alt=""></div>
+          <div class="Image"><img src=".\Images\Maple.jpg" alt=""></div>
           <div class="paragraphUnderImage">This is some subtext under an illustration or image</div>
         </div>
 
